--- a/src/main/resources/application-standalone.yaml
+++ b/src/main/resources/application-standalone.yaml
@@ -1,16 +1,18 @@
 spring:
+  application:
+    name: OrderBooks
   datasource:
     url: jdbc:postgresql://localhost:5432/library
     username: postgres
     password: postgres
-  flyway:
-    schemas:
-      - public
-      - library
+    driver-class-name: org.postgresql.Driver
   jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: true
-server:
-  port: 8081
-logging:
-  level:
-    sql: info
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  sql:
+    init:
+      mode: always
